--- a/.envrc
+++ b/.envrc
@@ -7,8 +7,7 @@
 # exporting them in .envrc.local         #
 ##########################################
 
-# Add local paths for binaries and scripts
-PATH_add ./bin
+# Add local paths for scripts
 PATH_add ./scripts
 
 # ShellCheck complains about things like `foo=$(cmd)` because you lose the
