Protect folks from installing pip requirements without virtualenv

--- a/.envrc
+++ b/.envrc
@@ -50,6 +50,9 @@ check_required_variables() {
 # Project Configuration #
 #########################
 
+# Python Settings
+export PIP_REQUIRE_VIRTUALENV=true
+
 # Django Settings
 export DJANGO_ALLOWED_HOSTS="localhost 127.0.0.1 [::1]"
 export DJANGO_DEBUG=1
