--- a/deploy/django-nginx.conf
+++ b/deploy/django-nginx.conf
@@ -3,10 +3,10 @@ server {
     server_name ~^(.+)$;
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        root /srv/code/django_app;
+        root /srv/static;
     }
     location / {
         include proxy_params;
-        proxy_pass http://unix:/srv/code/django_app/django_app.sock;
+        proxy_pass http://unix:/srv/django_app.sock;
     }
 }
