--- a/deploy/django-nginx.conf
+++ b/deploy/django-nginx.conf
@@ -3,10 +3,9 @@ server {
     server_name ~^(.+)$;
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        root /srv/static;
+        root /srv;
     }
     location / {
-        include proxy_params;
         proxy_pass http://unix:/srv/django_app.sock;
     }
 }
