--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,11 +3,10 @@ upstream django {
 }
 server {
     listen 80;
-
     server_name ~^(.+)$;
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        alias /home/app/web/static/;
+        alias /home/app/web/staticfiles/;
     }
     location / {
         proxy_pass http://django;
