--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ server {
     log_not_found off;
   }
 
-  location /static/ {
+  location /staticfiles/ {
     alias /home/app/web/staticfiles/;
   }
 
