--- a/.envrc
+++ b/.envrc
@@ -66,6 +66,9 @@ export DB_USER=postgres
 export DB_HOST=localhost
 export DB_PORT=5432
 export DB_NAME=dev_db
+# Transcom ppp-infra repo path
+require PPP_INFRA_PATH "Set to your local checkout of https://github.com/transcom/ppp-infra (e.g., ~/your-personal-repo-directory/ppp-infra)."
+
 
 ##############################################
 # Load Local Overrides and Check Environment #
@@ -77,6 +80,19 @@ export DB_NAME=dev_db
 if [ -e .envrc.local ]
 then
   source_env .envrc.local
+fi
+
+# Source the ppp-infra repo .envrc to get aws-vault wrapper
+# configuration setup.
+if [ -e "$PPP_INFRA_PATH"/transcom-ppp/.envrc ]
+then
+    source_env "$PPP_INFRA_PATH"/transcom-ppp/.envrc
+    behind=$(git --git-dir="$PPP_INFRA_PATH/.git" rev-list --count origin/master...HEAD)
+    if [[ "$behind" != "0" ]]; then
+      log_error "Your repository checkout of transcom/ppp-infra is $behind commits behind master. Please update."
+    fi
+else
+    log_error "Unable to find the transcom-ppp/.envrc file. Please check PPP_INFRA_PATH if aws commands don't work."
 fi
 
 # Check that all required environment variables are set
