Add aws vault information

--- a/.envrc
+++ b/.envrc
@@ -66,8 +66,14 @@ export DB_USER=postgres
 export DB_HOST=localhost
 export DB_PORT=5432
 export DB_NAME=dev_db
+
 # Transcom ppp-infra repo path
 require PPP_INFRA_PATH "Set to your local checkout of https://github.com/transcom/ppp-infra (e.g., ~/your-personal-repo-directory/ppp-infra)."
+
+# Your AWS credentials should be setup in the transcom-ppp profile using
+# aws-vault. They will be detected and used by the app automatically.
+export AWS_VAULT_KEYCHAIN_NAME=login
+export AWS_PROFILE=transcom-ppp
 
 
 ##############################################
