Initial code for login.gov integration

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,5 @@
-Django>=3.0
+Django<3.0
+git+https://github.com/koriaf/django-oidc.git
 gunicorn>=20.0
 psycopg2-binary>=2.8.4,<3.0
 psycopg2>=2.8.4,<3.0
