--- a/.envrc
+++ b/.envrc
@@ -10,14 +10,6 @@
 # Add local paths for scripts
 PATH_add ./scripts
 
-# ShellCheck complains about things like `foo=$(cmd)` because you lose the
-# return value of `cmd`. That said, we're not using `set -e`, so we aren't
-# really concerned about return values. The following `true`, applies the
-# rule to the entire file.
-# See: https://github.com/koalaman/shellcheck/wiki/SC2155
-# shellcheck disable=SC2155
-true
-
 required_vars=()
 var_docs=()
 
@@ -32,9 +24,11 @@ require() {
 # Check all variables declared as required. If any are missing, print a message and
 # exit with a non-zero status.
 check_required_variables() {
+  missing_var=false
+
   for i in "${!required_vars[@]}"; do
     var=${required_vars[i]}
-    if [[ -z "${!var}" ]]; then
+    if [[ -z "${!var:-}" ]]; then
       log_status "${var} is not set: ${var_docs[i]}"
       missing_var=true
     fi
