Added environment variables to use as defaults in create-engadmin-user

--- a/.envrc
+++ b/.envrc
@@ -53,6 +53,9 @@ export DJANGO_ALLOWED_HOSTS="localhost 127.0.0.1 [::1] ${LOCAL_HOST_NAME}"
 export DJANGO_DEBUG=1
 export DJANGO_SECRET_KEY="9k#x@9w3zh+2w0)g=zk4#p%-h4f3r@^q&2rwp#phjicfb-#f@*"
 
+require DJANGO_SUPERUSER_USERNAME "Username to use by default with create-engadmin-user"
+require DJANGO_SUPERUSER_EMAIL "E-mail address to use by default with create-engadmin-user; should match a login.gov email"
+
 # DB Settings
 export DB_ENGINE=django.db.backends.postgresql
 export DB_PASSWORD=mysecretpassword
