Update docker to work with crypto lib and new port and env vars

--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -14,7 +14,7 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev
+    && apk add postgresql-dev gcc python3-dev musl-dev git libffi-dev
 
 # install dependencies
 RUN pip install --upgrade pip
@@ -42,7 +42,8 @@ RUN mkdir -p $APP_HOME $APP_HOME/staticfiles
 WORKDIR $APP_HOME
 
 # install dependencies
-RUN apk update && apk add libpq
+RUN apk update \
+    && apk add libpq gcc python3-dev musl-dev libffi-dev openssl-dev
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
 RUN pip install --upgrade pip
