--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
           )$
 
   - repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+    rev: v2.5.0
     hooks:
       - id: check-ast
       - id: check-json
@@ -20,11 +20,15 @@ repos:
       - id: debug-statements
       - id: detect-private-key
       - id: fix-encoding-pragma
-      - id: flake8
       - id: trailing-whitespace
 
+  - repo: https://gitlab.com/pycqa/flake8.git
+    rev: 3.7.9
+    hooks:
+      - id: flake8
+
   - repo: git://github.com/igorshubovych/markdownlint-cli
-    rev: v0.21.0
+    rev: v0.22.0
     hooks:
       - id: markdownlint
         entry: markdownlint --ignore .github/*.md
