refactor how secret key is loaded for development vs when deployed. Local still requires a key generation step but deployed code expects LOGIN_GOV_JWK_SET env var

--- a/.envrc
+++ b/.envrc
@@ -44,6 +44,8 @@ check_required_variables() {
 # Project Configuration #
 #########################
 
+export ENVIRONMENT=development
+
 # Python Settings
 export PIP_REQUIRE_VIRTUALENV=true
 
